lotta debugging of the workspaceSnapshot

--- a/animations/src/test/resources/db.properties
+++ b/animations/src/test/resources/db.properties
@@ -1,3 +1,5 @@
 user=${db.login}
 password=${db.password}
 url=jdbc:postgresql://${db.server}:${db.port}/${db.database}
+#loggerLevel=trace
+#loggerFile=jdbc.out
