--- a/pom.xml
+++ b/pom.xml
@@ -344,7 +344,7 @@
 				<groupId>com.fasterxml.jackson.datatype</groupId>
 				<artifactId>jackson-datatype-jsr310</artifactId>
 				<version>${jackson.version}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
@@ -511,6 +511,11 @@
 				<groupId>org.jsonschema2pojo</groupId>
 				<artifactId>jsonschema2pojo-core</artifactId>
 				<version>0.5.1</version>
+			</dependency>
+			<dependency>
+				<groupId>ru.yandex.qatools.embed</groupId>
+				<artifactId>postgresql-embedded</artifactId>
+				<version>2.10</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
