HANDINAVI boots and serves Unversal spa.
Revert embedded postgresql config. fix jersey teps.

--- a/handi-navi/pom.xml
+++ b/handi-navi/pom.xml
@@ -16,6 +16,18 @@
 	</properties>
 
 	<dependencies>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId> 
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId> 
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId> 
+        </dependency>
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
