--- a/pom.xml
+++ b/pom.xml
@@ -41,14 +41,15 @@
 		<antlr.version>4.7</antlr.version>
 		<dropwizard.version>1.3.4</dropwizard.version>
 		<metrics.version>4.0.2</metrics.version>
-		<postgresql.driver.version>42.2.5</postgresql.driver.version>
+		<postgresql.driver.version>42.7.4</postgresql.driver.version>
 		<jackson.version>2.9.8</jackson.version>
 		<jacoco.version>0.7.5.201505241946</jacoco.version>
-		<jooq.version>3.11.2</jooq.version>
+		<jooq.version>3.19.15</jooq.version>
 		<jaxb.version>2.3.0</jaxb.version>
 		<liquibase.version>3.6.1</liquibase.version>
 		<slf4j.version>1.7.25</slf4j.version>
 
+		<version.java>23</version.java>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<jdbc.url>jdbc:postgresql://${db.server}:${db.port}/core</jdbc.url>
@@ -102,7 +103,7 @@
 			<dependency>
 				<groupId>org.controlsfx</groupId>
 				<artifactId>controlsfx</artifactId>
-				<version>8.40.12</version>
+				<version>11.2.1</version>
 			</dependency>
 			<dependency>
 				<groupId>com.chiralbehaviors.layout</groupId>
@@ -136,9 +137,14 @@
 				<version>${jooq.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.jooq</groupId>
+				<artifactId>jooq-jackson-extensions</artifactId>
+				<version>${jooq.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-dbcp2</artifactId>
-				<version>2.0</version>
+				<version>2.12.0</version>
 			</dependency>
 			<dependency>
 				<groupId>io.dropwizard</groupId>
@@ -199,7 +205,7 @@
 			<dependency>
 				<groupId>javax.ws.rs</groupId>
 				<artifactId>javax.ws.rs-api</artifactId>
-				<version>2.0.1</version>
+				<version>2.1.1</version>
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
@@ -244,7 +250,7 @@
 			<dependency>
 				<groupId>org.apache.maven</groupId>
 				<artifactId>maven-project</artifactId>
-				<version>2.2.1</version>
+				<version>3.0-alpha-2</version>
 				<type>jar</type>
 			</dependency>
 			<dependency>
@@ -273,7 +279,17 @@
 			<dependency>
 				<groupId>org.apache.maven</groupId>
 				<artifactId>maven-plugin-api</artifactId>
-				<version>3.0.4</version>
+				<version>3.9.9</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.maven</groupId>
+				<artifactId>maven-model</artifactId>
+				<version>3.9.9</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.maven</groupId>
+				<artifactId>maven-artifact</artifactId>
+				<version>3.9.9</version>
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
@@ -303,17 +319,17 @@
 			<dependency>
 				<groupId>org.antlr</groupId>
 				<artifactId>ST4</artifactId>
-				<version>4.0.8</version>
+				<version>4.3.4</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-jdk14</artifactId>
-				<version>1.7.21</version>
+				<version>2.1.0-alpha1</version>
 			</dependency>
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
-				<version>21.0</version>
+				<version>33.3.1-jre</version>
 			</dependency>
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
@@ -348,7 +364,7 @@
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
-				<version>1.2.3</version>
+				<version>1.5.12</version>
 			</dependency>
 			<dependency>
 				<groupId>org.postgresql</groupId>
@@ -358,7 +374,7 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.11</version>
+				<version>4.13.2</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
@@ -374,7 +390,7 @@
 			<dependency>
 				<groupId>com.fasterxml.uuid</groupId>
 				<artifactId>java-uuid-generator</artifactId>
-				<version>3.1.3</version>
+				<version>5.1.0</version>
 				<exclusions>
 					<exclusion>
 						<artifactId>log4j</artifactId>
@@ -385,7 +401,7 @@
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-core</artifactId>
-				<version>1.9.5</version>
+				<version>5.14.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
@@ -455,7 +471,7 @@
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-all</artifactId>
-				<version>1.9.5</version>
+				<version>2.0.2-beta</version>
 			</dependency>
 			<dependency>
 				<groupId>com.loginbox.heroku</groupId>
@@ -465,7 +481,7 @@
 			<dependency>
 				<groupId>org.osgi</groupId>
 				<artifactId>org.osgi.service.component.annotations</artifactId>
-				<version>1.3.0</version>
+				<version>1.5.1</version>
 			</dependency>
 			<dependency>
 				<groupId>javax.annotation</groupId>
@@ -490,7 +506,7 @@
 			<dependency>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok</artifactId>
-				<version>1.16.20</version>
+				<version>1.18.36</version>
 			</dependency>
 			<dependency>
 				<groupId>com.sun.activation</groupId>
@@ -500,7 +516,7 @@
 			<dependency>
 				<groupId>commons-beanutils</groupId>
 				<artifactId>commons-beanutils</artifactId>
-				<version>1.9.3</version>
+				<version>1.9.4</version>
 			</dependency>
 			<dependency>
 				<groupId>org.reflections</groupId>
@@ -510,31 +526,17 @@
 			<dependency>
 				<groupId>org.jsonschema2pojo</groupId>
 				<artifactId>jsonschema2pojo-core</artifactId>
-				<version>0.5.1</version>
+				<version>1.2.2</version>
 			</dependency>
 			<dependency>
 				<groupId>ru.yandex.qatools.embed</groupId>
 				<artifactId>postgresql-embedded</artifactId>
-				<version>1.22</version>
+				<version>2.10</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
 	<repositories>
-		<repository>
-			<id>chiralbehaviors-snapshots</id>
-			<url>http://repository-chiralbehaviors.forge.cloudbees.com/snapshot/</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>chiralbehaviors-release</id>
-			<url>http://repository-chiralbehaviors.forge.cloudbees.com/release/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
 		<repository>
 			<id>jcenter</id>
 			<url>https://jcenter.bintray.com/</url>
@@ -582,10 +584,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>3.11.0</version>
 				<configuration>
-					<source>9</source>
-					<target>9</target>
+					<release>${version.java}</release>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -648,7 +649,7 @@
 				</plugin>
 				<plugin>
 					<artifactId>maven-plugin-plugin</artifactId>
-					<version>3.5</version>
+					<version>3.15.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
