--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -31,8 +31,12 @@
             <groupId>com.chiralbehaviors</groupId>
             <artifactId>jbcrypt</artifactId>
         </dependency>
-        
-        
+		
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.chiralbehaviors.CoRE</groupId>
 			<artifactId>thing-ontology</artifactId>
