add deps that aren't sourced from repos any more.  should be self contained but the DB process.

--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,9 @@
 		<module>schema</module>
 		<module>test-plugin</module>
 		<module>acm-95-ontology</module>
-<!--		<module>handi-navi</module>-->
+		<module>utils</module>
+		<module>jbcrypt</module>
+		<!--		<module>handi-navi</module>-->
 <!--		<module>universal</module>-->
 <!--		<module>postgresql-testing</module>-->
 	</modules>
